kubernetes/storage/databases/postgres/pgadmin/ingress.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: pgAdmin
    gethomepage.dev/description: PostgreSQL management tool
    gethomepage.dev/group: Applications
    gethomepage.dev/icon: pgadmin.png
    gethomepage.dev/pod-selector: >-
      postgres-operator.crunchydata.com/pgadmin in (
        pgadmin
      )
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames:
    - pgadmin.local.solonsstuff.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pgadmin
          port: 5050
